phase-0-html-images-lab

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   </head>
   <body>
     <!-- Your code here -->
+     <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+     <img src="ttps://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+    <img 
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+  alt="a majestic lion resting in the savannah" 
+  title="the king of the hakuna mipaka" 
+/>
   </body>
 </html>
